** Also add bcdui/i18n/default/lang if you want another default language than en, see web.xml
* removed bcdui.widget._createTopLevelElement function, switch to use bcdui.util.getSingletonElement
* SubjectFilters are now also applied on writing, details see above
* bcd_user_sec writing is now secured if using the new BindingSet xml
* Signiture of WriteProcessingCallback#processEndRow changed

==== Release 5_2_0

.Major new features:

. Components: Scorecard, Cube, Charts, Export
* Scorecard configurator added support for templates, ranking, sorting
* New reporting component added: a Free Analysis Report component (FAR)

. Widgets
* htmlHeaderBuilder now adds css classes bcdDimension/bcdMeasure
* New filter widget bcduiUniversalFilterNg allowing AND/OR expressions

. Core
* wrs-request wrq now supports HAVING clause
* New bcdui.wkModels.bcdCategories well-known model
* New Wrq2SqlServlet returning plain SQL generated from WRS-Request
* Extended features for taking over filters for detail export and drill

.Backward Incompatibilities:
. dm:FilterTranslation, dm:DimensionTranslation and dm:PeriodTranslation were renamed to dm:FT, dm:DT and dm:PT
. dm:FilterTranslation toRangeWhen attribute was moved to dm:PeriodTranslation
. LoginServlet was removed, adjust web.xml and let loginform have action=""
. bcdui.utils.wrsUtils.postWrs: onSuccessCb, onFailureCb become onSuccess, onFailure

==== Release 5_1_0

.Major new features:

. Components: Scorecard, Cube, Charts, Export
* Added Scorecard configurator with a drag'n drop area similar to the cube one
* Scorecard new scc:Description element in configuration, picked up by tooltip
* Scorecard new scc:Kpi/@skipAspects allows to list space separated per kpi, which aspects do not apply. Per default bcdFailure and bcdFrequeny are disabled for KPI which are not of type i/t
* dm:Measure element has got dm:Categories definition, currently supported by Free Analysis Report component (FAR)